[package]
name = "quicksweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
tungstenite = "0.21.0"
rand="0.8.5"
itertools="0.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
